--- a/app/index.html
+++ b/app/index.html
@@ -3,21 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Чат на Socket.IO з кімнатами та нікнеймами</title>
-    <!-- Підключення Bootstrap CSS -->
+    <title>"Socket.IO Chat</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Підключення власного CSS -->
     <link href="/styles.css" rel="stylesheet">
-    <!-- Підключення Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
-    <!-- Підключення jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!-- Підключення власного JS -->
     <script src="/script.js"></script>
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Чат з кімнатами та нікнеймами</h1>
+        <h1 class="text-center">Socket.IO Chat Rooms</h1>
         <div class="form-group">
             <label for="nickname">Ваш нікнейм:</label>
             <input id="nickname" class="form-control" placeholder="Введіть ваш нікнейм" autocomplete="off" />
